@@ -4,7 +4,7 @@
 int build(char *arg, int buildAmount, char *passPhrase,
 	         char *buildRoot, int fromTarball, int test, char *cookie,
                  char * rcfile, char * arch, char * os, 
-                 char * buildplatforms);
+                 char * buildplatforms, int force);
 
 #endif
 
