@@ -30,6 +30,7 @@
 	- there must be a { between two % in a query format (unless %% is used)
 
 2.5.5 -> 2.5.6:
+	- permit --rmsource --force even if sources/patches are missing.
 	- don't compute md5sum on non-file %config objects. (from Jos Vos)
 	- check arch only on RPMBUILD_{PREP,BUILD,INSTALL,PACKAGEBINARY}.
 	- configure.in: set default value for RPM. (Tim Mooney)
